--- a/display.html
+++ b/display.html
@@ -35,7 +35,7 @@
     
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt accusamus eum doloribus tempore recusandae minus distinctio, in hic mollitia reprehenderit maxime temporibus vitae. Quasi, fugit. Architecto dicta ullam maxime molestiae.</p>
 
-        <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, earum veniam inventore cum quod voluptatem non? Laboriosam esse sunt neque.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores ad mollitia similique nemo, debitis officiis sed error assumenda sit ullam odio incidunt dolores voluptas saepe magnam vero ea recusandae et laborum itaque quis dolorum hic? Nam repellat odio ducimus? Labore consectetur animi quisquam, dignissimos minus quas quidem perspiciatis amet!</p>
 
     </div>
    
