--- a/display.html
+++ b/display.html
@@ -40,6 +40,8 @@
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus maiores ad mollitia similique nemo, debitis officiis sed error assumenda sit ullam odio incidunt dolores voluptas saepe magnam vero ea recusandae et laborum itaque quis dolorum hic? Nam repellat odio ducimus? Labore consectetur animi quisquam, dignissimos minus quas quidem perspiciatis amet!</p>
 
+        <img src="logo.png">
+
 
        
 
