menambah ul li a html css

--- a/display.html
+++ b/display.html
@@ -42,6 +42,11 @@
 
 
         <img src="logo.png">
+
+        <ul>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+        </ul>
     </div>
     <div class="footer">
         <p>copyright 2024 .Web Informatika</p>
