--- a/display.html
+++ b/display.html
@@ -46,6 +46,7 @@
         <ul>
             <li><a href="#">HTML</a></li>
             <li><a href="#">CSS</a></li>
+            <li><a href="#">Javascript</a></li>
         </ul>
     </div>
     <div class="footer">
