--- a/display.html
+++ b/display.html
@@ -47,6 +47,7 @@
             <li><a href="#">HTML</a></li>
             <li><a href="#">CSS</a></li>
             <li><a href="#">Javascript</a></li>
+            <li><a href="">PHP</a></li>
         </ul>
     </div>
     <div class="footer">
