--- a/display.html
+++ b/display.html
@@ -42,12 +42,14 @@
 
 
         <img src="logo.png">
-
+       
+        <h4>Judul Artikel</h4>
         <ul>
             <li><a href="#">HTML</a></li>
             <li><a href="#">CSS</a></li>
             <li><a href="#">Javascript</a></li>
             <li><a href="">MYSQL</a></li>
+            <li><a href="">bootstrapt</a></li>
 
         </ul>
     </div>
