--- a/display.html
+++ b/display.html
@@ -44,6 +44,7 @@
         <img src="logo.png">
        
         <h4>Judul Artikel</h4>
+        <h2>Judul Artikel</h2>
         <ul>
             <li><a href="#">HTML</a></li>
             <li><a href="#">CSS</a></li>
