--- a/display.html
+++ b/display.html
@@ -44,7 +44,7 @@
         <img src="logo.png">
        
         <h4>Judul Artikel</h4>
-        <h1>Judul Artikel</h1>
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae facere quod magni error totam minima illo dolorum non adipisci eos! Modi sapiente blanditiis labore commodi deleniti quaerat ratione perferendis soluta.</h1>
         <ul>
             <li><a href="#">HTML</a></li>
             <li><a href="#">CSS</a></li>
