--- a/display.html
+++ b/display.html
@@ -45,6 +45,8 @@
        
         <h4>Judul Artikel</h4>
         <h1>Judul Artikel</h1>
+        <h2>Judul Artikel</h2>
+
 
         <ul>
             <li><a href="#">HTML</a></li>
