--- a/display.html
+++ b/display.html
@@ -46,6 +46,7 @@
         <h4>Judul Artikel</h4>
         <h1>Judul Artikel</h1>
         <h2>Judul Artikel</h2>
+        <h5>Judul Artikel</h5>
 
 
 
