--- a/display.html
+++ b/display.html
@@ -47,6 +47,7 @@
         <h1>Judul Artikel</h1>
         <h2>Judul Artikel</h2>
         <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>Lorem ipsum dolor sit amet.</h3>
 
 
 
