--- a/display.html
+++ b/display.html
@@ -48,6 +48,7 @@
             <li><a href="">MYSQL</a></li>
             <li><a href="">bootstrapt</a></li>
             <li><a href="">ddfdfdf</a></li>
+            <li><a href="">react</a></li>
 
         </ul>
     </div>
