--- a/display.html
+++ b/display.html
@@ -49,6 +49,7 @@
             <li><a href="">bootstrapt</a></li>
             <li><a href="">ddfdfdf</a></li>
             <li><a href="">react</a></li>
+            <li><a href="">next js</a></li>
 
         </ul>
     </div>
